--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ background-color:var(--background-color);
     background-color:var(--second-background-color);
 }
 .address {
+    font-style: normal;
     font-size: 14px;
     line-height: calc(24/14);
     letter-spacing: 0.03em;
